--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
     <description>IC1101</description>
     <properties>
         <java.version>1.8</java.version>
+        <ic1101.version>0.0.1</ic1101.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+
     </properties>
     <dependencies>
         <dependency>
