--- a/pom.xml
+++ b/pom.xml
@@ -9,137 +9,28 @@
         <module>IC1101-cloud</module>
         <module>IC1101-base</module>
         <module>IC1101-middle</module>
+        <module>IC1101-dependencies</module>
     </modules>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.7</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
     <groupId>com.cwd</groupId>
     <artifactId>IC1101</artifactId>
     <version>${ic1101.version}</version>
     <name>IC1101</name>
     <description>IC1101</description>
+
     <properties>
-        <java.version>1.8</java.version>
         <ic1101.version>0.0.1</ic1101.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-
-        <!-- 微服务属性 -->
-        <spring-cloud.version>2021.0.2</spring-cloud.version>
-        <spring-cloud-alibaba.version>2021.1</spring-cloud-alibaba.version>
-        <knife4j-spring-boot-starter.version>3.0.3</knife4j-spring-boot-starter.version>
-        <knife4j-spring-ui.version>2.0.9</knife4j-spring-ui.version>
-
-
-        <fastjson.version>1.2.78</fastjson.version>
-        <!-- 数据库驱动 -->
-        <commons-beanutils.version>1.9.4</commons-beanutils.version>
-        <hutool.version>5.3.8</hutool.version>
-
-        <!-- 持久层 -->
-        <commons.version>2.6</commons.version>
-
-        <!-- 数据库驱动 -->
-        <guava.version>29.0-jre</guava.version>
     </properties>
 
 
-    <dependencies>
-        <!-- Lombok -->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-        </dependency>
-        <!-- json -->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>${fastjson.version}</version>
-        </dependency>
-    </dependencies>
 
     <dependencyManagement>
         <dependencies>
-
-            <!-- spring-cloud-->
             <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
+                <groupId>com.cwd</groupId>
+                <artifactId>IC1101-dependencies</artifactId>
+                <version>${ic1101.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>
-            <!-- spring-cloud-alibaba -->
-            <dependency>
-                <groupId>com.alibaba.cloud</groupId>
-                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-                <version>${spring-cloud-alibaba.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
-
-            <!-- ic1101-common-core -->
-            <dependency>
-                <groupId>com.cwd</groupId>
-                <artifactId>IC1101-common-core</artifactId>
-                <version>${ic1101.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.cwd</groupId>
-                <artifactId>IC1101-base-cloud</artifactId>
-                <version>${ic1101.version}</version>
-            </dependency>
-
-            <!-- IC1101-biz-system -->
-            <dependency>
-                <groupId>com.cwd</groupId>
-                <artifactId>IC1101-biz-system</artifactId>
-                <version>${ic1101.version}</version>
-            </dependency>
-
-            <!-- IC1101-common-system-local-api -->
-            <dependency>
-                <groupId>com.cwd</groupId>
-                <artifactId>system-local-api</artifactId>
-                <version>${ic1101.version}</version>
-            </dependency>
-
-            <!-- commons-beanutils -->
-            <dependency>
-                <groupId>commons-beanutils</groupId>
-                <artifactId>commons-beanutils</artifactId>
-                <version>${commons-beanutils.version}</version>
-            </dependency>
-
-
-            <dependency>
-                <groupId>com.cwd</groupId>
-                <artifactId>IC1101-common-tools</artifactId>
-                <version>${ic1101.version}</version>
-            </dependency>
-
-            <!-- hutool工具类-->
-            <dependency>
-                <groupId>cn.hutool</groupId>
-                <artifactId>hutool-core</artifactId>
-                <version>${hutool.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>cn.hutool</groupId>
-                <artifactId>hutool-crypto</artifactId>
-                <version>${hutool.version}</version>
-            </dependency>
-
-            <!-- guava工具类 -->
-            <dependency>
-                <groupId>com.google.guava</groupId>
-                <artifactId>guava</artifactId>
-                <version>${guava.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -183,5 +74,12 @@
             </properties>
         </profile>
     </profiles>
-
+    <!-- 使用 aliyun 的 Maven 源，提升下载速度 -->
+    <repositories>
+        <repository>
+            <id>aliyunmaven</id>
+            <name>aliyun</name>
+            <url>https://maven.aliyun.com/repository/public</url>
+        </repository>
+    </repositories>
 </project>
