--- a/IC1101-base/IC1101-base-database/IC1101-base-db-flyway/pom.xml
+++ b/IC1101-base/IC1101-base-database/IC1101-base-db-flyway/pom.xml
@@ -3,21 +3,21 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>IC1101</artifactId>
+        <artifactId>IC1101-base-database</artifactId>
         <groupId>com.cwd</groupId>
         <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>IC1101-cloud</artifactId>
-    <packaging>pom</packaging>
+    <description>数据库版本管理迁移模块</description>
+    <artifactId>IC1101-base-db-flyway</artifactId>
 
-    <description>微服务相关技术组件</description>
-    <modules>
-        <module>IC1101-cloud-gateway</module>
-        <module>IC1101-cloud-sentinel</module>
-        <module>IC1101-cloud-nacos</module>
-    </modules>
-
+    <dependencies>
+        <!-- https://flywaydb.org/ -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
