--- a/IC1101-base/IC1101-base-security/pom.xml
+++ b/IC1101-base/IC1101-base-security/pom.xml
@@ -3,31 +3,32 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>IC1101</artifactId>
+        <artifactId>IC1101-base</artifactId>
         <groupId>com.cwd</groupId>
         <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>jar</packaging>
 
-    <artifactId>IC1101-common</artifactId>
+    <artifactId>IC1101-base-security</artifactId>
 
-    <description>基础</description>
+    <description>认证授权模块</description>
 
     <dependencies>
-        <!-- 工具类相关 -->
+
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
+            <groupId>com.cwd</groupId>
+            <artifactId>IC1101-common</artifactId>
         </dependency>
+
         <dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+
+        <!-- Web 相关 -->
         <dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct-jdk8</artifactId> <!-- use mapstruct-jdk8 for Java 8 or higher -->
+            <groupId>com.cwd</groupId>
+            <artifactId>IC1101-base-web</artifactId>
         </dependency>
     </dependencies>
-
 </project>
