--- a/IC1101-base/IC1101-base-web/pom.xml
+++ b/IC1101-base/IC1101-base-web/pom.xml
@@ -3,21 +3,24 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>IC1101</artifactId>
+        <artifactId>IC1101-base</artifactId>
         <groupId>com.cwd</groupId>
         <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>jar</packaging>
 
-    <artifactId>IC1101-cloud</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>IC1101-base-web</artifactId>
+    <description>web框架相关</description>
 
-    <description>微服务相关技术组件</description>
-    <modules>
-        <module>IC1101-cloud-gateway</module>
-        <module>IC1101-cloud-sentinel</module>
-        <module>IC1101-cloud-nacos</module>
-    </modules>
+
+    <dependencies>
+        <!-- Web 相关 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
 
 
 </project>
