--- a/IC1101-middle/pom.xml
+++ b/IC1101-middle/pom.xml
@@ -8,6 +8,7 @@
         <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <description>中间件学习</description>
 
     <artifactId>IC1101-middle</artifactId>
     <packaging>pom</packaging>
