--- a/IC1101-modules/IC1101-module-system/pom.xml
+++ b/IC1101-modules/IC1101-module-system/pom.xml
@@ -3,21 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>IC1101</artifactId>
+        <artifactId>IC1101-modules</artifactId>
         <groupId>com.cwd</groupId>
         <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>IC1101-cloud</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>IC1101-module-system</artifactId>
 
-    <description>微服务相关技术组件</description>
-    <modules>
-        <module>IC1101-cloud-gateway</module>
-        <module>IC1101-cloud-sentinel</module>
-        <module>IC1101-cloud-nacos</module>
-    </modules>
-
+    <description>通用业务，支撑上层业务</description>
 
 </project>
