--- a/IC1101-modules/pom.xml
+++ b/IC1101-modules/pom.xml
@@ -9,15 +9,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>IC1101-cloud</artifactId>
     <packaging>pom</packaging>
-
-    <description>微服务相关技术组件</description>
     <modules>
-        <module>IC1101-cloud-gateway</module>
-        <module>IC1101-cloud-sentinel</module>
-        <module>IC1101-cloud-nacos</module>
+        <module>IC1101-module-system</module>
     </modules>
+
+    <artifactId>IC1101-modules</artifactId>
+
+    <description>写业务的地方~</description>
 
 
 </project>
