--- a/IC1101-server/pom.xml
+++ b/IC1101-server/pom.xml
@@ -9,15 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>IC1101-cloud</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>IC1101-server</artifactId>
 
-    <description>微服务相关技术组件</description>
-    <modules>
-        <module>IC1101-cloud-gateway</module>
-        <module>IC1101-cloud-sentinel</module>
-        <module>IC1101-cloud-nacos</module>
-    </modules>
 
 
 </project>
