--- a/IC1101-dependencies/pom.xml
+++ b/IC1101-dependencies/pom.xml
@@ -29,7 +29,7 @@
 
         <!-- 数据库驱动 -->
         <commons-beanutils.version>1.9.4</commons-beanutils.version>
-        <hutool.version>5.3.8</hutool.version>
+        <hutool.version>5.6.1</hutool.version>
 
         <!-- 持久层 -->
         <commons.version>2.6</commons.version>
@@ -114,32 +114,23 @@
                 <version>${mapstruct.version}</version>
             </dependency>
 
-            <!-- hutool工具类-->
             <dependency>
                 <groupId>cn.hutool</groupId>
-                <artifactId>hutool-core</artifactId>
-                <version>${hutool.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>cn.hutool</groupId>
-                <artifactId>hutool-crypto</artifactId>
+                <artifactId>hutool-all</artifactId>
                 <version>${hutool.version}</version>
             </dependency>
 
-            <!-- guava工具类 -->
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
             </dependency>
 
-            <!-- knife4j -->
             <dependency>
                 <groupId>com.github.xiaoymin</groupId>
                 <artifactId>knife4j-spring-boot-starter</artifactId>
                 <version>${knife4j-spring-boot-starter.version}</version>
             </dependency>
-            <!-- commons -->
             <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
