--- a/IC1101-biz/IC1101-biz-system/IC1101-biz-system-api/pom.xml
+++ b/IC1101-biz/IC1101-biz-system/IC1101-biz-system-api/pom.xml
@@ -3,21 +3,21 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>IC1101</artifactId>
+        <artifactId>IC1101-biz-system</artifactId>
         <groupId>com.cwd</groupId>
         <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>jar</packaging>
 
-    <artifactId>IC1101-biz</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>IC1101-biz-system</module>
-    </modules>
-
-    <description>业务技术组件</description>
+    <artifactId>IC1101-biz-system-api</artifactId>
+    <description>system api 提供给其他模块使用</description>
 
     <dependencies>
+        <dependency>
+            <groupId>com.cwd</groupId>
+            <artifactId>IC1101-common</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
