--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 
     <properties>
         <ic1101.version>0.0.1</ic1101.version>
+        <maven-plugin-version>3.10.1</maven-plugin-version>
     </properties>
 
 
@@ -43,6 +44,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-plugin-version}</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
