--- a/IC1101-biz/IC1101-biz-system/IC1101-biz-system-api/pom.xml
+++ b/IC1101-biz/IC1101-biz-system/IC1101-biz-system-api/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>IC1101-biz-system</artifactId>
         <groupId>com.cwd</groupId>
-        <version>0.0.1</version>
+        <version>${ic1101.version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
@@ -17,6 +17,13 @@
         <dependency>
             <groupId>com.cwd</groupId>
             <artifactId>IC1101-common</artifactId>
+        </dependency>
+
+        <!-- 参数校验 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
