--- a/IC1101-biz/IC1101-biz-system/IC1101-biz-system-service/pom.xml
+++ b/IC1101-biz/IC1101-biz-system/IC1101-biz-system-service/pom.xml
@@ -3,19 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>IC1101-biz</artifactId>
+        <artifactId>IC1101-biz-system</artifactId>
         <groupId>com.cwd</groupId>
         <version>${ic1101.version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
-    <modules>
-        <module>IC1101-biz-system-api</module>
-        <module>IC1101-biz-system-service</module>
-    </modules>
+    <packaging>jar</packaging>
 
-    <artifactId>IC1101-biz-system</artifactId>
-    <description>系统业务</description>
+    <artifactId>IC1101-biz-system-service</artifactId>
 
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
 
 </project>
