--- a/IC1101-base/IC1101-base-web/pom.xml
+++ b/IC1101-base/IC1101-base-web/pom.xml
@@ -15,10 +15,20 @@
 
 
     <dependencies>
+        <dependency>
+            <groupId>com.cwd</groupId>
+            <artifactId>IC1101-common</artifactId>
+        </dependency>
+
+
         <!-- Web 相关 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
     </dependencies>
 
