--- a/IC1101-biz/IC1101-biz-system/IC1101-biz-system-service/pom.xml
+++ b/IC1101-biz/IC1101-biz-system/IC1101-biz-system-service/pom.xml
@@ -8,13 +8,14 @@
         <version>${ic1101.version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>jar</packaging>
 
     <artifactId>IC1101-biz-system-service</artifactId>
 
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>com.cwd</groupId>
+            <artifactId>IC1101-biz-system-api</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
