--- a/IC1101-dependencies/pom.xml
+++ b/IC1101-dependencies/pom.xml
@@ -18,6 +18,7 @@
         <!-- 统一依赖管理 -->
         <spring.boot.version>2.6.8</spring.boot.version>
         <!-- 工具类相关 -->
+        <jasypt-spring-boot-starter.version>3.0.4</jasypt-spring-boot-starter.version>
         <transmittable.version>2.12.2</transmittable.version>
         <lombok.version>1.18.20</lombok.version>
         <mapstruct.version>1.4.1.Final</mapstruct.version>
@@ -34,7 +35,10 @@
         <commons-beanutils.version>1.9.4</commons-beanutils.version>
         <druid.version>1.2.8</druid.version>
         <mybatis-plus.version>3.5.1</mybatis-plus.version>
-
+        <!-- DB -->
+        <dynamic-datasource.version>3.5.0</dynamic-datasource.version>
+        <!-- Test 测试相关 -->
+        <podam.version>7.2.6.RELEASE</podam.version>
 
     </properties>
 
@@ -134,6 +138,11 @@
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>${mybatis-plus.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>dynamic-datasource-spring-boot-starter</artifactId> <!-- 多数据源 -->
+                <version>${dynamic-datasource.version}</version>
+            </dependency>
 
             <!-- commons-beanutils -->
             <dependency>
@@ -143,6 +152,13 @@
             </dependency>
 
             <!-- 工具类相关 -->
+
+            <dependency>
+                <groupId>com.github.ulisesbocchio</groupId>
+                <artifactId>jasypt-spring-boot-starter</artifactId> <!-- 加解密 -->
+                <version>${jasypt-spring-boot-starter.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>transmittable-thread-local</artifactId>
@@ -192,6 +208,12 @@
                 <groupId>commons-lang</groupId>
                 <artifactId>commons-lang</artifactId>
                 <version>${commons.version}</version>
+            </dependency>
+            <!-- 测试相关-->
+            <dependency>
+                <groupId>uk.co.jemos.podam</groupId> <!-- 单元测试，随机生成 POJO 类 -->
+                <artifactId>podam</artifactId>
+                <version>${podam.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
