--- a/IC1101-base/pom.xml
+++ b/IC1101-base/pom.xml
@@ -17,6 +17,7 @@
         <module>IC1101-base-web</module>
         <module>IC1101-base-security</module>
         <module>IC1101-base-test</module>
+        <module>IC1101-base-redis</module>
     </modules>
 
     <description>框架技术组件</description>
