--- a/IC1101-dependencies/pom.xml
+++ b/IC1101-dependencies/pom.xml
@@ -36,6 +36,7 @@
         <druid.version>1.2.8</druid.version>
         <mybatis-plus.version>3.5.1</mybatis-plus.version>
         <!-- DB -->
+        <redisson.version>3.17.3</redisson.version>
         <dynamic-datasource.version>3.5.0</dynamic-datasource.version>
         <!-- Test 测试相关 -->
         <podam.version>7.2.6.RELEASE</podam.version>
@@ -142,6 +143,11 @@
                 <groupId>com.baomidou</groupId>
                 <artifactId>dynamic-datasource-spring-boot-starter</artifactId> <!-- 多数据源 -->
                 <version>${dynamic-datasource.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson-spring-boot-starter</artifactId>
+                <version>${redisson.version}</version>
             </dependency>
 
             <!-- commons-beanutils -->
