--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>IC1101-server</module>
         <module>IC1101-modules</module>
         <module>IC1101-common</module>
+        <module>IC1101-base-tenant</module>
     </modules>
     <groupId>com.cwd</groupId>
     <artifactId>IC1101</artifactId>
