--- a/IC1101-base/IC1101-base-database/IC1101-base-db-mybatis/pom.xml
+++ b/IC1101-base/IC1101-base-database/IC1101-base-db-mybatis/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>IC1101-base-database</artifactId>
         <groupId>com.cwd</groupId>
-        <version>0.0.1</version>
+        <version>${ic1101.version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
