--- a/IC1101-base/IC1101-base-redis/pom.xml
+++ b/IC1101-base/IC1101-base-redis/pom.xml
@@ -5,23 +5,26 @@
     <parent>
         <artifactId>IC1101-base</artifactId>
         <groupId>com.cwd</groupId>
-        <version>0.0.1</version>
+        <version>${ic1101.version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>IC1101-base-redis</artifactId>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.cwd</groupId>
-            <artifactId>IC1101-common</artifactId>
-        </dependency>
-
-        <!-- DB 相关 -->
-        <dependency>
-            <groupId>org.redisson</groupId>
-            <artifactId>redisson-spring-boot-starter</artifactId>
-        </dependency>
-    </dependencies>
+   <dependencies>
+       <dependency>
+           <groupId>com.cwd</groupId>
+           <artifactId>IC1101-common</artifactId>
+       </dependency>
+       <!-- DB 相关 -->
+       <dependency>
+           <groupId>org.redisson</groupId>
+           <artifactId>redisson-spring-boot-starter</artifactId>
+       </dependency>
+       <dependency>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter-cache</artifactId> <!-- 实现对 Caches 的自动化配置 -->
+       </dependency>
+   </dependencies>
 
 </project>
